--- a/ds final.Rmd
+++ b/ds final.Rmd
@@ -18,15 +18,15 @@ library(randomForest)
 
 Combine the raw data together.
 ```{r}
-data08<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2008.csv")
-data09<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2009.csv")
-data10<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2010.csv")
-data11<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2011.csv")
-data12<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2012.csv")
-data13<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2013.csv")
-data14<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2014.csv")
-data15<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2015.csv")
-data16<-read.csv("/Users/yangtian/Desktop/ds final/Crime_Incidents__2016.csv")
+data08<-read.csv("Crime_Incidents__2008.csv")
+data09<-read.csv("Crime_Incidents__2009.csv")
+data10<-read.csv("Crime_Incidents__2010.csv")
+data11<-read.csv("Crime_Incidents__2011.csv")
+data12<-read.csv("Crime_Incidents__2012.csv")
+data13<-read.csv("Crime_Incidents__2013.csv")
+data14<-read.csv("Crime_Incidents__2014.csv")
+data15<-read.csv("Crime_Incidents__2015.csv")
+data16<-read.csv("Crime_Incidents__2016.csv")
 data <- rbind(data08, data09, data10, data11,data12,data13,data14,data15,data16)
 dim(data)
 head(data)
